# khzeb-actually

./: README.md
crates/khzeb-client/: Cargo.toml
crates/khzeb-client/src/: main.rs
crates/khzeb-client/src/renderer/: atlas.rs  base.rs  batch.rs  bindings.rs  buffer.rs  camera.rs  color.rs  dirty.rs  instance.rs  mod.rs  pipeline.rs  texture.rs
crates/khzeb-client/src/renderer/shaders/: batch.wgsl  standard.wgsl
crates/khzeb-common/: Cargo.toml
crates/khzeb-common/src/: lib.rs
crates/khzeb-common/src/runtime/: bytes.rs  mod.rs
crates/khzeb-common/src/utils/: mod.rs  name.rs  resource.rs
crates/khzeb-common/src/world/: component.rs  entity.rs  mod.rs  world.rs
crates/khzeb-server/: Cargo.toml
examples/empty-subsystem/: main.c  makefile
ffi/c/: base.h
