[package]
name = "khzeb-client"
version = "0.0.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
anyhow = "1.0.97"
pollster = "0.4.0"
glam = { version = "0.30", features = ["bytemuck"] }
bytemuck = { version = "1.22", features = ["derive"] }
bitflags = { version = "2.9.0", features = ["bytemuck"] }
khzeb = { path = "../khzeb-common" }
lazy_static = "1.5.0"
micromap = "0.0.19"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
